--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
     {% block css %}{% endblock %}
 
     <!-- Custom Fonts -->
-    <link href="{% static "font-awesome-4.1.0/css/font-awesome.min.cs" %}s" rel="stylesheet" type="text/css">
+    <link href="{% static "font-awesome-4.1.0/css/font-awesome.min.css" %}" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
     <link href='http://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
