--- a/templates/index.html
+++ b/templates/index.html
@@ -33,6 +33,8 @@
             </div>
             <div class="row text-center">
                 <div class="col-md-3">
+                </div>
+                <div class="col-md-3">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-mobile-phone fa-stack-1x fa-inverse"></i>
@@ -49,6 +51,8 @@
                     </span>
                     <h4 class="service-heading">Email</h4>
                     <p class="text-muted">upce.ic24@gmail.com</p>
+                </div>
+                <div class="col-md-3">
                 </div>
             </div>
         </div>
@@ -95,7 +99,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="{% static "img/about/2.jpg" %}" alt="">
+                                <img class="img-circle img-responsive" src="{% static "img/about/3.jpg" %}" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -108,7 +112,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="{% static "img/about/3.jpg" %}" alt="">
+                                <img class="img-circle img-responsive" src="{% static "img/about/2.jpg" %}" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
