--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/#page-top">YEC</a>
+            <a class="navbar-brand page-scroll" href="/#page-top">YOUNG ENTREPRENUERS CONVENTION</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
