--- a/templates/index.html
+++ b/templates/index.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="row">
-                <img src="{% static "img/banner.jpg" %}" class="img-responsive" alt="">
+                <img src="{% static "img/pubmat.jpg" %}" class="img-responsive" alt="">
             </div>
         </div>
     </section>
