--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,6 @@
             <div class="container">
                 <div class="intro-text">
                     <div class="intro-heading">Young Entreprenuers Convention</div>
-                    <a href="#" class="page-scroll btn btn-xl">Go to our facebook page</a>
                 </div>
             </div>
         </section>
@@ -40,9 +39,7 @@
                         <i class="fa fa-mobile-phone fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Mobile</h4>
-                    <p class="text-muted">+63 917 80-74275</p>
-                    <p class="text-muted">+63 922 870-8777</p>
-                    <p class="text-muted">+63 920 922-0324</p>
+                    <p class="text-muted">0922 838 2402</p>
                 </div>
                 <div class="col-md-3">
                     <span class="fa-stack fa-4x">
