--- a/templates/index.html
+++ b/templates/index.html
@@ -140,7 +140,7 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading"> Submit your Proposal</h2>
                     {% if wizard.steps.current == '0' %}
-                        <h3 class="section-subheading text-muted">Application open only until October 18, 2014</h3>
+                        <h3 class="section-subheading text-muted"></h3>
                     {% endif %}
                 </div>
             </div>
