--- a/templates/index.html
+++ b/templates/index.html
@@ -64,7 +64,7 @@
                 </div>
             </div>
 
-            <div class="row">
+            <div class="row" style="margin: 0 auto;">
                 <img src="{% static "img/pubmat.jpg" %}" class="img-responsive" alt="">
             </div>
         </div>
