--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
             </div>
 
             <div class="row" style="margin: 0 auto;">
-                <img src="{% static "img/pubmat.jpg" %}" class="img-responsive" alt="">
+                <img style="margin: 0 auto;" src="{% static "img/pubmat.jpg" %}" class="img-responsive" alt="">
             </div>
         </div>
     </section>
