--- a/templates/index.html
+++ b/templates/index.html
@@ -15,41 +15,19 @@
         <section id="header">
             <div class="container">
                 <div class="intro-text">
-                    <div class="intro-heading">Young Entreprenuers Convention</div>
+                    <div class="intro-heading">The quickest mobile application idea-generating competition</div>
+                    <div class="intro-heading">14th Young Entrepreneurs Convention</div>
                 </div>
             </div>
         </section>
     </header>
 
-
-    <!-- contact Section -->
-    <section id="contact">
+    <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Contact us</h2>
-                </div>
-            </div>
-            <div class="row text-center">
-                <div class="col-md-3">
-                </div>
-                <div class="col-md-3">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-mobile-phone fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Mobile</h4>
-                    <p class="text-muted">0922 838 2402</p>
-                </div>
-                <div class="col-md-3">
-                    <span class="fa-stack fa-4x">
-                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
-                    </span>
-                    <h4 class="service-heading">Email</h4>
-                    <p class="text-muted">upce.ic24@gmail.com</p>
-                </div>
-                <div class="col-md-3">
+                    <h2 class="section-heading">ABOUT SWIFT</h2>
+                    <h3 class="section-subheading text-muted">Swift is the idea-generation competition that needs only one thing, your passion.</h3>
                 </div>
             </div>
         </div>
@@ -58,14 +36,7 @@
     <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-
-                </div>
-            </div>
-
-            <div class="row" style="margin: 0 auto;">
-                <img style="margin: 0 auto;" src="{% static "img/pubmat.jpg" %}" class="img-responsive" alt="">
+                <embed width="510" height="320" src="http://www.youtube.com/v/An6qpJWuE">
             </div>
         </div>
     </section>
@@ -80,53 +51,42 @@
             </div>
             <div class="row">
                 <div class="col-lg-12">
-                    <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="{% static "img/about/1.jpg" %}" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4 class="subheading">1 THINK</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Think of a mobile appplication.</p>
-                                </div>
-                            </div>
+                    <p>Think. (See Graphics Gallery for file) Conceptualize a mobile application that YOU think is useful, reliable and beneficial to users, but be as creative and out-of-the-box as you must.</p>
+                    <ul>
+                        <li>All college and HS students residing in the Philippines are eligible to join the competition. Participants may join individually or by pair. </li>
+                        <li>You may choose to fill up the online form below with your idea or a printed form, available in the UP Circle of Entrepreneurs Tambayan (Virata School of Business, UP Diliman). There is no maximum number of entries for each individual or pair. Deadline of submission of forms is on October 18,2014.</li>
+                        <li>The top 100 will be chosen on the following criteria
+                            <ul>
+                                <li>Creativity - 50% </li>
+                                <li>Feasibility - 30% </li>
+                                <li>Relevance - 20%</li>
+                            </ul>
                         </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="{% static "img/about/3.jpg" %}" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4 class="subheading">2 Build</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Build up your chosen topic.</p>
-                                </div>
-                            </div>
+                    </ul>
+                    <p>Build. (See Graphics Gallery for file) Start making your dreams into reality by building up your mobile application. How it looks, how it helps, how it works.</p>
+                    <ul>
+                        <li>The Top 100 entries will be forwarded to Ideaspace for further screening, Ideaspace has the right to call in participants to undergo their organization’s training for a chance to execute the mobile app and have it available to the market! And you don’t even need to pay to make your idea real: Ideaspace will finance and help you build it. Exciting, isn’t it?  </li>
+                    </ul>
+                    <p>Excel. (See Graphics Gallery for file) Be part of our Swift event, presenting your idea not just to us, but also to a panel of judges.</p>
+                    <ul>
+                        <li>The panel of judges will be selecting the top 10 entries based on the same criteria. Top 100 entries and The Top 10 entries that are qualified for the Panel Round will be released on October 19, 2014.</li>
+                        <li>Entries qualified for the Panel Round will present their idea in front of a panel and audience in not more than 3 minutes. </li>
+                        <li>Judges will select the overall winner based on the following criteria:
+                             <ul>
+                                <li>Market Potential </li>
+                                <li>Creativity </li>
+                                <li>Feasibility </li>
+                                <li>Presentation </li>
+                                <li>Relevance</li>
+                            </ul>
                         </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="{% static "img/about/2.jpg" %}" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4 class="subheading">3 EXCEL</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Excel in the main event.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
-                            </div>
-                        </li>
+                    </ul>
+                    <p>Winners will receive:</p>
+                    <ul>
+                        <li>Champion: P25,000 cash & gift prizes</li>
+                        <li>2nd Place: 10,000</li>
+                        <li>3rd Place: 5,000</li>
+                        <li>Consolation Prizes: P1,000 each</li>
                     </ul>
                 </div>
             </div>
@@ -138,7 +98,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading"> Submit your Proposal</h2>
+                    <h2 class="section-heading">TELL US YOUR IDEA</h2>
                     {% if wizard.steps.current == '0' %}
                         <h3 class="section-subheading text-muted"></h3>
                     {% endif %}
@@ -193,5 +153,93 @@
         </div>
     </section>
 
+    <!-- contact Section -->
+    <section id="contact">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Contact us</h2>
+                </div>
+            </div>
+            <div class="row text-center">
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-mobile-phone fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Mobile</h4>
+                    <p class="text-muted">0922 838 2402</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Email</h4>
+                    <p class="text-muted">upce.ic24@gmail.com</p>
+                </div>
+                <div class="col-md-4">
+                    <span class="fa-stack fa-4x">
+                        <i class="fa fa-circle fa-stack-2x text-primary"></i>
+                        <i class="fa fa-facebook-o fa-stack-1x fa-inverse"></i>
+                    </span>
+                    <h4 class="service-heading">Facebook</h4>
+                    <p class="text-muted">www.facebook.com/upce1</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
 {% endblock %}
+
+<!--
+<ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="{% static "img/about/1.jpg" %}" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">1 THINK</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Think of a mobile appplication.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="{% static "img/about/3.jpg" %}" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">2 Build</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Build up your chosen topic.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="{% static "img/about/2.jpg" %}" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">3 EXCEL</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Excel in the main event.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>Be Part
+                                    <br>Of Our
+                                    <br>Story!</h4>
+                            </div>
+                        </li>
+                    </ul>
+-->
