--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,7 +12,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand page-scroll" href="/#page-top">YOUNG ENTREPRENUERS CONVENTION</a>
+            <a class="navbar-brand page-scroll" href="/#page-top">YOUNG ENTREPRENEURS CONVENTION</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -22,10 +22,13 @@
                     <a class="page-scroll" href="/#about">About</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#process">Process</a>
+                    <a class="page-scroll" href="/#process">Mechanics</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="/#form">Join us!</a>
+                    <a class="page-scroll" href="/#form">Submit</a>
+                </li>
+                <li>
+                    <a class="page-scroll" href="/#contact">Contact us</a>
                 </li>
             </ul>
         </div>
