--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,8 @@
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">ABOUT SWIFT</h2>
                     <h3 class="section-subheading text-muted">Swift is the idea-generation competition that needs only one thing, your passion.</h3>
+                    <p>What do you need to join?</p>
+                    <p>A concept. No long proposals, no research, no hassle. Let your concept drive your competition away, and make your way to creating your app and a cash prize of Php 25,000!</p>
                 </div>
             </div>
         </div>
@@ -181,7 +183,7 @@
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
-                        <i class="fa fa-facebook-o fa-stack-1x fa-inverse"></i>
+                        <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Facebook</h4>
                     <p class="text-muted">www.facebook.com/upce1</p>
