--- a/templates/index.html
+++ b/templates/index.html
@@ -25,19 +25,22 @@
     <section id="about" class="bg-light-gray">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-7 text-center">
                     <h2 class="section-heading">ABOUT SWIFT</h2>
                     <h3 class="section-subheading text-muted">Swift is the idea-generation competition that needs only one thing, your passion.</h3>
                     <p>What do you need to join?</p>
                     <p>A concept. No long proposals, no research, no hassle. Let your concept drive your competition away, and make your way to creating your app and a cash prize of Php 25,000!</p>
                 </div>
+                <div class="col-lg-3"></div>
             </div>
         </div>
     </section>
 
-    <section id="about" class="bg-light-gray">
+    <section id="video" class="bg-light-gray">
         <div class="container">
             <div class="row">
+                asd
                 <embed width="510" height="320" src="http://www.youtube.com/v/An6qpJWuE">
             </div>
         </div>
@@ -52,7 +55,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-12">
+                <div class="col-lg-3"></div>
+                <div class="col-lg-7">
                     <p>Think. (See Graphics Gallery for file) Conceptualize a mobile application that YOU think is useful, reliable and beneficial to users, but be as creative and out-of-the-box as you must.</p>
                     <ul>
                         <li>All college and HS students residing in the Philippines are eligible to join the competition. Participants may join individually or by pair. </li>
@@ -91,6 +95,7 @@
                         <li>Consolation Prizes: P1,000 each</li>
                     </ul>
                 </div>
+                <div class="col-lg-3"></div>
             </div>
         </div>
     </section>
@@ -197,51 +202,51 @@
 
 <!--
 <ul class="timeline">
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="{% static "img/about/1.jpg" %}" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4 class="subheading">1 THINK</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Think of a mobile appplication.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="{% static "img/about/3.jpg" %}" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4 class="subheading">2 Build</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Build up your chosen topic.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="{% static "img/about/2.jpg" %}" alt="">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4 class="subheading">3 EXCEL</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Excel in the main event.</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
-                            </div>
-                        </li>
-                    </ul>
+    <li>
+        <div class="timeline-image">
+            <img class="img-circle img-responsive" src="{% static "img/about/1.jpg" %}" alt="">
+        </div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
+                <h4 class="subheading">1 THINK</h4>
+            </div>
+            <div class="timeline-body">
+                <p class="text-muted">Think of a mobile appplication.</p>
+            </div>
+        </div>
+    </li>
+    <li class="timeline-inverted">
+        <div class="timeline-image">
+            <img class="img-circle img-responsive" src="{% static "img/about/3.jpg" %}" alt="">
+        </div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
+                <h4 class="subheading">2 Build</h4>
+            </div>
+            <div class="timeline-body">
+                <p class="text-muted">Build up your chosen topic.</p>
+            </div>
+        </div>
+    </li>
+    <li>
+        <div class="timeline-image">
+            <img class="img-circle img-responsive" src="{% static "img/about/2.jpg" %}" alt="">
+        </div>
+        <div class="timeline-panel">
+            <div class="timeline-heading">
+                <h4 class="subheading">3 EXCEL</h4>
+            </div>
+            <div class="timeline-body">
+                <p class="text-muted">Excel in the main event.</p>
+            </div>
+        </div>
+    </li>
+    <li class="timeline-inverted">
+        <div class="timeline-image">
+            <h4>Be Part
+                <br>Of Our
+                <br>Story!</h4>
+        </div>
+    </li>
+</ul>
 -->
