--- a/templates/index.html
+++ b/templates/index.html
@@ -37,11 +37,11 @@
         </div>
     </section>
 
-    <section id="video" class="bg-light-gray">
+    <section id="video">
         <div class="container">
             <div class="row">
                 asd
-                <embed width="510" height="320" src="http://www.youtube.com/v/An6qpJWuE">
+                <embed width="510" height="320" src="http://www.youtube.com/v/U_An6qpJWuE">
             </div>
         </div>
     </section>
