--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,55 @@
                     <h3 class="section-subheading text-muted">Swift is the idea-generation competition that needs only one thing, your passion.</h3>
                     <p>What do you need to join?</p>
                     <p>A concept. No long proposals, no research, no hassle. Let your concept drive your competition away, and make your way to creating your app and a cash prize of Php 25,000!</p>
+
+                    <ul class="timeline">
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="{% static "img/about/1.jpg" %}" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">1 THINK</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Think of a mobile appplication.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="{% static "img/about/3.jpg" %}" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">2 Build</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Build up your chosen topic.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="{% static "img/about/2.jpg" %}" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4 class="subheading">3 EXCEL</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">Excel in the main event.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <h4>Be Part
+                                    <br>Of Our
+                                    <br>Story!</h4>
+                            </div>
+                        </li>
+                    </ul>
                 </div>
                 <div class="col-lg-3"></div>
             </div>
@@ -40,13 +89,16 @@
     <section id="video">
         <div class="container">
             <div class="row">
-                asd
+                <div class="col-lg-3"></div>
+                <div class="col-lg-7">
                 <embed width="510" height="320" src="http://www.youtube.com/v/U_An6qpJWuE">
+                </div>
+                <div class="col-lg-3"></div>
             </div>
         </div>
     </section>
 
-    <section id="process">
+    <section id="process"  class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -101,7 +153,7 @@
     </section>
 
     <!-- products Grid Section -->
-    <section id="form" class="bg-light-gray">
+    <section id="form">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -161,7 +213,7 @@
     </section>
 
     <!-- contact Section -->
-    <section id="contact">
+    <section id="contact"  class="bg-light-gray">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -201,52 +253,5 @@
 {% endblock %}
 
 <!--
-<ul class="timeline">
-    <li>
-        <div class="timeline-image">
-            <img class="img-circle img-responsive" src="{% static "img/about/1.jpg" %}" alt="">
-        </div>
-        <div class="timeline-panel">
-            <div class="timeline-heading">
-                <h4 class="subheading">1 THINK</h4>
-            </div>
-            <div class="timeline-body">
-                <p class="text-muted">Think of a mobile appplication.</p>
-            </div>
-        </div>
-    </li>
-    <li class="timeline-inverted">
-        <div class="timeline-image">
-            <img class="img-circle img-responsive" src="{% static "img/about/3.jpg" %}" alt="">
-        </div>
-        <div class="timeline-panel">
-            <div class="timeline-heading">
-                <h4 class="subheading">2 Build</h4>
-            </div>
-            <div class="timeline-body">
-                <p class="text-muted">Build up your chosen topic.</p>
-            </div>
-        </div>
-    </li>
-    <li>
-        <div class="timeline-image">
-            <img class="img-circle img-responsive" src="{% static "img/about/2.jpg" %}" alt="">
-        </div>
-        <div class="timeline-panel">
-            <div class="timeline-heading">
-                <h4 class="subheading">3 EXCEL</h4>
-            </div>
-            <div class="timeline-body">
-                <p class="text-muted">Excel in the main event.</p>
-            </div>
-        </div>
-    </li>
-    <li class="timeline-inverted">
-        <div class="timeline-image">
-            <h4>Be Part
-                <br>Of Our
-                <br>Story!</h4>
-        </div>
-    </li>
-</ul>
+
 -->
