--- a/templates/index.html
+++ b/templates/index.html
@@ -15,8 +15,8 @@
         <section id="header">
             <div class="container">
                 <div class="intro-text">
-                    <div class="intro-heading">The quickest mobile application idea-generating competition</div>
-                    <div class="intro-heading">14th Young Entrepreneurs Convention</div>
+                    <div class="intro-heading">SWIFT</div>
+                    <div class="intro-lead-in">The Quickest Mobile Application Idea-generating Copmetition</div>
                 </div>
             </div>
         </section>
@@ -28,7 +28,7 @@
                 <div class="col-lg-3"></div>
                 <div class="col-lg-7 text-center">
                     <h2 class="section-heading">ABOUT SWIFT</h2>
-                    <h3 class="section-subheading text-muted">Swift is the idea-generation competition that needs only one thing, your passion.</h3>
+                    <h3 class="section-subheading text-muted">Swift is the idea-generation competition that needs only one thing, your brilliant idea!</h3>
                     <p>What do you need to join?</p>
                     <p>A concept. No long proposals, no research, no hassle. Let your concept drive your competition away, and make your way to creating your app and a cash prize of Php 25,000!</p>
                 </div>
@@ -90,13 +90,7 @@
                             </ul>
                         </li>
                     </ul>
-                    <p>Winners will receive:</p>
-                    <ul>
-                        <li>Champion: P25,000 cash & gift prizes</li>
-                        <li>2nd Place: 10,000</li>
-                        <li>3rd Place: 5,000</li>
-                        <li>Consolation Prizes: P1,000 each</li>
-                    </ul>
+                    <p>The best mobile application will receive P25000 cash!</p>
                 </div>
                 <div class="col-lg-3"></div>
             </div>
@@ -186,7 +180,7 @@
                         <i class="fa fa-envelope-o fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Email</h4>
-                    <p class="text-muted">upce.ic24@gmail.com</p>
+                    <p class="text-muted">upce.yec2014@gmail.com</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
