--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="col-lg-2"></div>
                 <div class="col-lg-8">
-                <embed width="854" height="480" src="http://www.youtube.com/v/U_An6qpJWuE">
+                <embed width="854" height="480" src="http://www.youtube.com/v/U_An6qpJWuE?autoplay=1">
                 </div>
                 <div class="col-lg-2"></div>
             </div>
