--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
         <section id="header">
             <div class="container">
                 <div class="intro-text">
-                    <div class="intro-heading">SWIFT</div>
+                    <div class="intro-heading"><img src="{% static "img/YEC Logob.png" %}" alt=""></div>
                     <div class="intro-lead-in">The Quickest Mobile Application Idea-generating Copmetition</div>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                                 <p class="text-muted">Be part of our Swift event, presenting your idea not just to us, but also to a panel of judges.
                                     <ul>
                                         <li class="text-muted">The panel of judges will be selecting the top 10 entries based on the same criteria. Top 100 entries and The Top 10 entries that are qualified for the Panel Round will be released on October 19, 2014.</li>
-                                        <li> class="text-muted"Entries qualified for the Panel Round will present their idea in front of a panel and audience in not more than 3 minutes. </li>
+                                        <li class="text-muted">Entries qualified for the Panel Round will present their idea in front of a panel and audience in not more than 3 minutes. </li>
                                         <li class="text-muted">Judges will select the overall winner based on the following criteria:
                                              <ul>
                                                 <li class="text-muted">Market Potential </li>
